--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,29 @@
 ---
 import LandingSection from '../components/LandingSection';
+import SecondSection from "../components/SecondSection"
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Blogr">
 	<LandingSection client:load/>
-	<main></main>
+	<SecondSection/>
 </Layout>
+<style is:global>
+::-webkit-scrollbar-thumb {
+  width: 10px;
+  height: 50px;
+  background-color: #333;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #ddd;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+</style>
