made the website more responsive

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,11 +8,13 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Blogr">
-	<LandingSection />
-	<SecondSection />
-  <ThirdSection/>
-<FourthSection/>
-<Footer/>
+  <div class="w-full">
+    <LandingSection />
+    <SecondSection />
+    <ThirdSection/>
+    <FourthSection/>
+    <Footer/>
+  </div>
 </Layout>
 <style is:global>
 ::-webkit-scrollbar-thumb {
