--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,13 +17,13 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
+				<slot />
 
-		<slot />
 	</body>
 </html>
 <style>
 	body {
-
+		width: fit-content;
   font-family: system-ui, sans-serif;
   background-color: #f6f6f6;
 }
